--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,93 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+:root {
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  --text-primary: black;
+  --text-secondary: white;
+  --transition-speed: 500ms;
+  --bg-primary: rgb(238, 141, 15);
+  --bg-secondary: rgb(241, 92, 33);
+}
+
+*{
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  box-sizing: border-box;
+  border: none;
+}
+
+.App {
+  background-image: linear-gradient(120deg, rgb(236, 120, 53), #FF0054);
+  min-height: 100vh;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+header {
+  min-height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.todo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3rem;
+}
+
+.todo-list {
+  min-width: 40%;
+  list-style: none;
+}
+
+.todo {
+  margin: 0.5rem;
+  background: white;
+  color: black;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: all 0.5s ease;
+}
+
+
+.completed-btn {
+  background: #3DA5D9;
+  margin-left: auto;
+  padding: 1rem;
+  outline: none;
+  cursor: pointer;
+}
+
+.trash-btn {
+  background: rgb(255, 149, 11);
+  padding: 1rem;
+  outline: none;
+  cursor: pointer;
+}
+
+.todo-item {
+  margin: 0.5rem;
+  padding: 0rem 0rem 0rem 0.5rem;
+  background: white;
+  color: black;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: all 0.5s ease;
+}
 
